# Circle-Detection-CNN-rs

./: Cargo.toml  README.md
src/: circle_dataset.rs  conv_block.rs  data.rs  lib.rs
