[package]
name = "circle_detection_cnn"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.14.0", features = ["wgpu", "dataset", "autodiff", "cuda-jit"] }
csv = "1.3.0"
serde = "1.0.210"
ndarray = "0.16"
ndarray-npy = "0.9.1"
# image = "*"

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"

[[bin]]
name = "training_network"
path = "src/bin/training_network.rs"